<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentHome"
    android:background="@color/white">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/md_black_1000"
        android:textSize="40sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="2dp"/>
    <!--
    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/gauge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        app:gaugePointStartColor="@color/gauge_start"
        app:gaugePointEndColor="@color/gauge_end"
        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStartValue="0"
        app:gaugeEndValue="20"
        app:gaugeStrokeColor="@color/md_grey_400"
        app:gaugeStrokeWidth="10dp"
        app:gaugeSweepAngle="270"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:layout_marginTop="15dp"/>
-->
    <com.github.anastr.speedviewlib.TubeSpeedometer
        android:id="@+id/gauge"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:layout_marginTop="15dp"
        app:sv_withTremble="false"
        app:sv_unit=""
        app:sv_speedTextColor="@android:color/transparent"
        app:sv_lowSpeedColor="@color/gauge_start"
        app:sv_mediumSpeedColor="@color/gauge_medium"
        app:sv_highSpeedColor="@color/gauge_end"
        app:sv_textSize="15sp"
        app:sv_speedometerBackColor="@color/grey_80"
        app:sv_speedTextSize="25sp"
        app:sv_speedTextPadding="2dp"
        app:sv_textColor="@color/md_black_1000"
        app:sv_indicator="NeedleIndicator"
        app:sv_unitUnderSpeedText="false"
        app:sv_withIndicatorLight="true"/>

    <TextView
        android:id="@+id/prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        android:textSize="22sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gauge"/>

    <TextView
        android:id="@+id/consommation_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consommation_en_eau"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prix"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/consommation_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/consommation_str"
        app:layout_constraintBottom_toBottomOf="@+id/consommation_str"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="40dp"/>
    <TextView
        android:id="@+id/tranche_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tranche_de_prix_actuelle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consommation_str"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:id="@+id/tranche_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/consommation_value"
        app:layout_constraintBottom_toBottomOf="@+id/tranche_str"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"/>
    <View
        android:id="@+id/focus_thief"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />
    <TextView
        android:id="@+id/seuil_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modifier_votre_seuil"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tranche_str"
        android:textColor="@color/blue_grey_900"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/consommation_value"
        app:layout_constraintBottom_toBottomOf="@+id/seuil_str">
        <EditText
            android:id="@+id/seuil_field"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:hint="@string/_0_par_defaut"
            android:inputType="number"
            android:textColor="@color/blue_grey_900"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refraichir"
        android:background="@drawable/roundbutton"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/seuil_str"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>