<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Facture"
            android:textColor="@color/blue_900"
            android:textSize="30sp"
            android:textStyle="bold" />
    <TextView
        android:id="@+id/periode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Facture"
        android:textSize="20sp"
        android:textColor="@color/blue_900"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mes informations"
        android:textSize="15sp"
        android:textColor="@color/grey_900"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"/>
    <View
        android:id="@+id/first_seperation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        /home/elwess/Desktop/ic_user.png<ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Client"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_contract"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/num_contrat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_localisation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adresse"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invoice_details"
        android:textSize="15sp"
        android:textColor="@color/grey_900"
        android:layout_gravity="left"
        android:layout_marginTop="40dp"/>
    <View
        android:id="@+id/second_separation"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_chart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Consommation totale en m3:"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/consommation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="right"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_money"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Totale Sonede en Dt:"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/total_sonede"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_money"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Sonede +Tva en Dt:"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/total_tva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_money"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Onas en Dt: "
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/total_onas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_calculator"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total en Dt"
            android:textSize="15sp"
            android:textColor="@color/blue_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_contrat"
            android:textSize="15sp"
            android:textColor="@color/grey_900"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Générer la facture en PDF"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>